# fastapi-starter

./: .env  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  test.db
alembic/: env.py
app/: main.py
app/config/: settings.py
app/custom_exception/: token_expired_exception.py
app/database/: redis_session.py  session.py
app/middleware/: rate_limitter.py
app/models/: __init__.py  cart_item.py  order.py  order_item.py  payment.py  product.py  review.py  user.py  wishlist.py
app/responses/: admin_responses.py  cart_item_response.py  common.py  notification_messages.py  order_item_response.py  order_responses.py  password_recovery_responses.py  payment_response.py  product_responses.py  register_response.py  reviews_response.py  user_responses.py  whishlist_response.py
app/routers/: admin.py  auth.py  cart_items.py  order_item.py  orders.py  password_recovery.py  payments.py  products.py  reviews.py  users.py  wishlists.py
app/schemas/: cart_item.py  categories.py  order.py  order_item.py  payment.py  product.py  review.py  user.py  wishlist.py
app/services/: admin_service.py  auth_service.py  cart_item_service.py  email_service.py  order_item_service.py  order_service.py  password_recovery_service.py  payment_service.py  product_service.py  review_service.py  user_service.py  wishlist_service.py
app/static/: email-verification.html  password-recovery.html
app/tests/: conftest.py  report.html  test_auth.py  test_orders.py  test_products.py  test_users.py
app/utils/: image_utils.py  input_validator.py  pagination.py  (+1 more)
myvenv/: pyvenv.cfg
