[project]
name = "e-commerce"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis==2.0.1",
    "aiosmtplib==3.0.2",
    "aiosqlite==0.19.0",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "bcrypt<4.1",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jinja2==3.1.5",
    "mako==1.3.8",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "passlib==1.7.4",
    "pluggy==1.5.0",
    "psycopg2==2.9.10",
    "pyasn1==0.6.1",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pyjwt==2.10.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-html==4.0.2",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "requests==2.32.3",
    "rsa==4.9",
    "sendgrid==6.11.0",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "stripe==11.5.0",
    "tomli==2.2.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
]
